# ITS

./: CMakeLists.txt
app/: CMakeLists.txt
include/glad/: glad.h
include/its/: fun.h
src/: CMakeLists.txt  fun.cpp  glad.c
test/: CMakeLists.txt  test1.cpp
